# dumpwd

./: LICENSE  README.md  pyproject.toml
dumpwd/: __init__.py  __main__.py  __version__.py  _consts.py  _get_contents.py  _get_inodes.py  _get_tree.py  api.py  cli.py
dumpwd/_internal/: cli.py  consts.py
dumpwd/api/: __init__.py  get_contents.py  get_inodes.py  get_tree.py
