[tool.poetry]
name = "dumpwd"
version = "0.1.3"
description = ""
authors = ["Jacob Valdez <jacob.valdez@limboid.ai>"]
license = "MIT"
readme = "README"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
