[tool.poetry]
name = "dumpwd"
version = "0.2.0"
description = ""
authors = ["Jacob Valdez <jacob.valdez@limboid.ai>"]
repository = "https://github.com/Limboid/dumpwd"
homepage = "https://github.com/Limboid/dumpwd"
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
dumpwd = "dumpwd.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
